[gd_scene load_steps=2 format=2]

[ext_resource path="res://characters/GeneratorContainer.gd" type="Script" id=2]

[node name="GeneratorContainer" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileTabContainer" type="TabContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 713.0
tab_align = 0

[node name="GeneratorFileDialog" type="FileDialog" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 507.0
margin_bottom = 307.0
rect_min_size = Vector2( 800, 400 )
popup_exclusive = true
access = 2
current_dir = "Z:/godot_projects/dicey_modgeons"
current_path = "Z:/godot_projects/dicey_modgeons/"
[connection signal="tab_changed" from="FileTabContainer" to="." method="_on_FileTabContainer_tab_changed"]
[connection signal="file_selected" from="GeneratorFileDialog" to="." method="_on_GeneratorFileDialog_file_selected"]
